- Added completed trainning.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,7 @@
     update any existing page or create new pages.
   </p>
   <button (click)="showAlert()">Show Alert Message</button>
+
+  <button (click)="testRequest()">Test Request</button> 
+
 </ion-content>
